--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./style.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+      <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 <header class="header">
-    <div class="container">
-        <div class="header__content">
+     <div class="container">
+         <div class="header__content">
     <div class="header__logo">
         <a href="logo__link">
             <img src="./img/Rectangle.png" alt="Logo icon" class="logo__icon">
@@ -28,100 +28,142 @@
             <li class="nav__li"> <a href="nav__link">Customers</a></li>
         </ul>
     </nav>
-    <button class="button">
-        Book a demo
-    </button>
-</div>
-</div>
-</header>
-    <div class="wrapper">
-<section class="preview">
-    <div class="preview container">
-    <div class="preview content">
-        <h1 class="preview__subtitle">
-            Make ecommerce
-        </h1>
-        <h1 class="preview__title">
-            More personal.
-        </h1>
-        <p class="preview__text">
-            Hundreds of brands use Qubit CommerceAI  to power the next generation of product recommendations, badging and insights to build exceptional customer experiences.
-        </p>
-    <div class="'preview__info">
-<form >
-    <input type="email" class="email" placeholder="Enter your email">
-    <button class="button">
-        Book a demo
-    </button>
-</form>
-<div class="preview__image">
-    <a href="preview__item">
-        <img src="./img/IMAGE (3).png" alt="Preview Item" class= "preview__pic">
-    </a>
-</div>
-</div>
+        <button class="button">
+              Book a demo
+        </button>
+        </div>
     </div>
+</header>
+      <div class="wrapper">
+<section class="preview">
+    <div class="container">
+         <div class="preview__left">
+                     <h1 class="preview__subtitle"> 
+                        Make ecommerce 
+                     </h1>
+                     <h1 class="preview__title">
+                        More personal.
+                     </h1>
+                      <p class="preview__text">
+                         Hundreds of brands use Qubit CommerceAI  to power the next generation of product recommendations, badging and insights to build exceptional customer experiences.
+                      </p>
+              <div class="'preview__info">
+                 <form >
+                        <input type="email" class="email" placeholder="Enter your email">
+                          <button class="button">
+                             Book a demo
+                          </button>
+                  </form>
+              </div>
+         </div>
+         <div class="preview__right">
+                    <a href="preview__item">
+                    <img src="./img/IMAGE (3).png" alt="Preview Item" class= "preview__pic">
+                    </a>
+              </div>
+        </div>    
 </section>
-</div>
-<div class="about">
-    <section class="about content">
-        <div class="container">
-            <div class="about__title">
-                <h1 class="title__big">
-                Grow 2.5x faster than your competitors.
-            </h1>
-            </div>
+    </div>
+<div class="about-us">
+    <section class="about">
+         <div class="container">
+             <div class="about__title">
+                  <h1 class="title__big">
+                     Grow 2.5x faster than your competitors.
+                   </h1>
+                 </div>
+               <div class="about__content">  
             <div class="about__image">
-                <a href="about__item" class="about">
-                    <img src="./img/IMAGE (1).png" alt="About Picture" class="about-pic">
-                </a>
-            </div>
-            <div class="about__subitle">
-                <h2 class="about__small-one">
-                    RIVER ISLAND
-                </h2>
-                <h2 class="about__text">
-                    River Island transforms the customer experience with personalization.
-                </h2>
-            </div>
+                      <a href="about__item" class="about">
+                     <img src="./img/IMAGE (1).png" alt="About Picture" class="about-pic">
+                  </a>           
+                <div class="about__subitle">
+                        <h2 class="about__small-one">
+                            RIVER ISLAND
+                        </h2>
+                         <h2 class="about__text">
+                             River Island transforms the customer experience with personalization.
+                        </h2>
+                    </div>
+                </div>
             <div class="about__image">
-                <a href="about__item" class="about">
-                    <img src="./img/IMAGE (2).png" alt="About Picture" class="about-pic">
-                </a>
-            </div>
-            <div class="about__subitle">
-                <h2 class="about__small-one">
-                    RIVER ISLAND
-                </h2>
-                <h2 class="about__text">
-                    River Island transforms the customer experience with personalization.
-                </h2>
+                       <a href="about__item" class="about">
+                       <img src="./img/IMAGE (2).png" alt="About Picture" class="about-pic">
+                       </a>
+               <div class="about__subitle">
+                          <h2 class="about__small-one">
+                              RIVER ISLAND
+                          </h2>
+                           <h2 class="about__text">
+                            River Island transforms the customer experience with personalization.
+                          </h2>
+                     </div>
+                </div>
             </div>
         </div>
     </section>
 </div>
 <div class="commerce">
-    <section class="commerce-content">
-<div class="container">
-    <div class="commerce__title">
-<h1 class="title">
-    Qubit CommerceAI.
-</h1>
-    </div>
- <div class="commerce__image">
-    <a href="" class="commerce__item">
-    <img src="./img/Vector.png" alt="Commerce item" class="commerce-pic"></a>
- </div>   
- <div class="commerce__image">
-    <a href="" class="commerce__item">
-    <img src="./img/Group.png" alt="Commerce item" class="commerce-pic"></a>
- </div>  
- <div class="commerce__image">
-    <a href="" class="commerce__item">
-    <img src="./img/Vector (2).png" alt="Commerce item" class="commerce-pic"></a>
- </div>  
+       <section class="commerce">
+        <div class="commerce-content">
+             <div class="commerce__title">
+                  <h1 class="title">
+                    Qubit CommerceAI.
+                 </h1>
+             </div>
+            </div>
+            <div class="commerce__socials">
+                 <div class="commerce__image">
+                         <a href="" class="commerce__item">
+                        <img src="./img/Vector.png" alt="Commerce item" class="commerce-pic"></a>
+                        <h2 class="commerce__subtitle">
+                            More insight
+                        </h2>
+                        <p class="commerce__text">
+                            Learn which products drive performance and which don't, through automated insights you can action.
+                        </p>
+                   </div>   
+                       <div class="commerce__image">
+                         <a href="" class="commerce__item">
+                         <img src="./img/Group.png" alt="Commerce item" class="commerce-pic"></a>
+                         <h2 class="commerce__subtitle">
+                            More personal
+                        </h2>
+                        <p class="commerce__text">
+                            Qubit CommerceAI generates a model per shopper to make every customer interaction more relevant.
+                        </p>
+                    </div>  
+                 <div class="commerce__image">
+                          <a href="" class="commerce__item">
+                         <img src="./img/Vector (2).png" alt="Commerce item" class="commerce-pic"></a>
+                         <h2 class="commerce__subtitle">
+                            More effective
+                        </h2>
+                        <p class="commerce__text">
+                            Qubit fuses data, intent, and design tools to enable your team to create more effective customer experiences.
+                        </p>
+                    </div>  
+                   </div> 
+                </div>
+            </div>
+       </section>
+   </div>
+ <footer class="footer">
+        <div class="footer__content">
+            <div class="footer__menu">
+   <nav class="menu">
+       <ul class="menu__list">
+           <li class="menu__item"> <a href="menu__link">Featured Capabilities</a></li>
+           <li class="menu__item"> <a href="menu__link">Products</a></li>
+           <li class="menu__item"> <a href="menu__link">Resources</a></li>
+           <li class="menu__item"> <a href="menu__link">Company</a></li>
+       </ul>
+   </nav>
 </div>
-    </section>
-</div>
+       <button class="button">
+             Book a demo
+       </button>
+       </div>
+</footer>
 </body>
 </html>
