--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     </div>
     <nav class="nav">
         <ul class="nav__ul">
-            <li class="nav__li"> <a href="nav__link">Why Qubit?</a></li>
-            <li class="nav__li"> <a href="nav__link">Products</a></li>
-            <li class="nav__li"> <a href="nav__link">Solutions</a></li>
-            <li class="nav__li"> <a href="nav__link">Customers</a></li>
+            <li class="nav__li"> <a href="#"class='nav__link'>Why Qubit?</a></li>
+            <li class="nav__li"> <a href="#"class='nav__link'>Products</a></li>
+            <li class="nav__li"> <a href="#"class='nav__link'>Solutions</a></li>
+            <li class="nav__li"> <a href="#"class='nav__link'>Customers</a></li>
         </ul>
     </nav>
         <button class="button">
@@ -153,10 +153,10 @@
             <div class="footer__menu">
    <nav class="menu">
        <ul class="menu__list">
-           <li class="menu__item"> <a href="menu__link">Featured Capabilities</a></li>
-           <li class="menu__item"> <a href="menu__link">Products</a></li>
-           <li class="menu__item"> <a href="menu__link">Resources</a></li>
-           <li class="menu__item"> <a href="menu__link">Company</a></li>
+           <li class="menu__item"> <a href="#"class='menu__link'>Featured Capabilities</a></li>
+           <li class="menu__item"> <a href="#"class='menu__link'>Products</a></li>
+           <li class="menu__item"> <a href="#"class='menu__link'>Resources</a></li>
+           <li class="menu__item"> <a href="#"class='menu__link'>Company</a></li>
        </ul>
    </nav>
 </div>
